--- a/src/styles/Park.module.scss
+++ b/src/styles/Park.module.scss
@@ -324,6 +324,10 @@
         font-size: 2.5rem;
       }
     }
+
+    p {
+      text-align: center;
+    }
   }
 
 
